--- a/Codography/App.xaml
+++ b/Codography/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Codography"
-             StartupUri="MainWindow.xaml">
+             xmlns:conv="clr-namespace:Codography.Converters" 
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+
+        <conv:InverseBooleanConverter x:Key="InverseBooleanConverter" />
     </Application.Resources>
 </Application>
