--- a/Codography/App.xaml
+++ b/Codography/App.xaml
@@ -8,6 +8,8 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
         <conv:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+        <conv:GreaterThanConverter x:Key="GreaterThanConverter" />
+        <conv:RangeConverter x:Key="RangeConverter" />
 
         <SolidColorBrush x:Key="PrimaryBlue" Color="#007ACC" />
         <SolidColorBrush x:Key="SuccessGreen" Color="#28A745" />
