--- a/Codography/App.xaml
+++ b/Codography/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Codography"
-             xmlns:conv="clr-namespace:Codography.Converters" 
+             xmlns:conv="clr-namespace:Codography.Converters"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -10,6 +10,8 @@
         <conv:InverseBooleanConverter x:Key="InverseBooleanConverter" />
         <conv:GreaterThanConverter x:Key="GreaterThanConverter" />
         <conv:RangeConverter x:Key="RangeConverter" />
+
+        <conv:LowerThanConverter x:Key="LowerThanConverter" />
 
         <SolidColorBrush x:Key="PrimaryBlue" Color="#007ACC" />
         <SolidColorBrush x:Key="SuccessGreen" Color="#28A745" />
